--- a/.github/workflows/android-master.yml
+++ b/.github/workflows/android-master.yml
@@ -21,5 +21,5 @@ jobs:
     - name: Upload APK
       uses: actions/upload-artifact@v1
       with:
-        name: app
+        name: RotorDroid
         path: app/build/outputs/apk/debug/app-debug.apk
